# yascad

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  model.yascad  playground.sh
gui/: index.html  package-lock.json  package.json
gui/src/: App.tsx  main.ts  monarchTokenizer.ts  repeat.stl  styles.css
gui/src-tauri/: Cargo.toml  tauri.conf.json
lang/backend/: Cargo.toml
lang/frontend/: Cargo.toml
lang/lib/: Cargo.toml
manifold-rs/: Cargo.toml  build.rs  run.sh
manifold-rs/src/: bounding_box.rs  common.rs  cross_section.rs  lib.rs  main.rs  manifold.rs  meshgl.rs  polygons.rs  raw.rs  rectangle.rs
src/: main.cpp
tests/: Cargo.toml  test_build.rs
tests/bad_inputs/: duplicate_named_builtin_arg.yascad  duplicate_named_def_arg.yascad
tests/inputs/: 2d_field_access.yascad  2d_operators.yascad  cube_square_shorthand.yascad  demo.yascad  difference.yascad  if_conditional.yascad  mirror.yascad  precedence.yascad  rotate_extrude.yascad  translate.yascad  user_defined_module.yascad
tests/snapshots/: test_build__build@2d_field_access.yascad.snap  test_build__build@2d_field_access.yascad.snap.stl  test_build__build@2d_operators.yascad.snap  test_build__build@2d_operators.yascad.snap.stl  test_build__build@basic.yascad.snap  test_build__build@basic.yascad.snap.stl  test_build__build@cube_square_shorthand.yascad.snap  test_build__build@cube_square_shorthand.yascad.snap.stl  test_build__build@demo.yascad.snap  test_build__build@demo.yascad.snap.stl  test_build__build@difference.yascad.snap  test_build__build@difference.yascad.snap.stl  (+16 more)
(+23 files in other folders)
